# libsparse

./: CMakeLists.txt  README.md  libsparse.pc.in  simg2simg.cpp
android-base/: stringprintf.cpp  stringprintf.h
